--- a/gameProject/src/main/webapp/resources/css/landing.css
+++ b/gameProject/src/main/webapp/resources/css/landing.css
@@ -5,23 +5,25 @@
   font-style: normal;
 }
 body{
-	background-image: url('../img/sea.jpeg');
+background-image: url('../img/background.png');
 
 font-family: "Jua", serif;
 
 
-background-size : cover;
+background-position : center;
+background-color : #E8F9FF;
+width : 110%;
 
 background-repeat: no-repeat;
 }
 .title{
 	margin-top :50px;
-	color : #295F98;
+	color : #E16A54;
 	font-size : 50pt;
 	margin-left : 575px;
 
 }
 .title:hover{
-	color : #003092;
+	color : #FFEDFA;
 	cursor : pointer;
 }
