--- a/gameProject/src/main/webapp/resources/css/login.css
+++ b/gameProject/src/main/webapp/resources/css/login.css
@@ -14,8 +14,7 @@
   border-radius: 5%;
   text-align: center;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left : 600px;
   height: 400px;
   align-items: center;
   display: flex;
@@ -26,18 +25,37 @@
   box-shadow: 3px 3px 3px white;
   margin-top: 100px; 
 }
+.button-container {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
 
 .login-btn {
   font-family: "Jua", serif;
   margin-left: 20px;
   background-color: buttonshadow;
-  height: 60px;
+  height: 55px;
   border-radius: 5%;
   box-shadow: 4px 4px 4px gray;
   cursor: pointer;
   border: 2px solid white;
   margin-top: 20px;
   color: #789DBC;
+}
+.Signup-btn{
+	font-family: "Jua", serif;
+  margin-left: 20px;
+  background-color:#789DBC;
+  height: 55px;
+  border-radius: 5%;
+  box-shadow: 4px 4px 4px gray;
+  cursor: pointer;
+  border: 2px solid white;
+  margin-top: 20px;
+  color: white;
+	
+	
 }
 
 .login-btn:hover {
