잔버그 수정

--- a/gameProject/src/main/webapp/resources/css/game.css
+++ b/gameProject/src/main/webapp/resources/css/game.css
@@ -205,7 +205,9 @@ h4 {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
+
 .Shop{
+	   z-index : 99;
 	    position: fixed;
     left: 50%;
     top: 50%;
